# mirror_soiling_data

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/scripts/: get_repo_stats.py
.github/workflows/: metrics.yml  publish.yml
ablrf/: experiment_20230421_20230423.xlsx
mirror_soiling_data/: __init__.py
mirror_soiling_data/ablrf/: ablrf_20230419_20230423.xlsx  ablrf_20231107_20231111.xlsx
mirror_soiling_data/mount_isa/: mount_isa_20200901_20200908.xlsx  mount_isa_20220604_20220611_5min.xlsx  mount_isa_parameters.xlsx
mirror_soiling_data/port_augusta/: port_augusta_20230826_20230901.xlsx
mirror_soiling_data/qut/: qut_20170905_20170913.xlsx  qut_parameters.xlsx
mirror_soiling_data/wodonga/: wodonga_20220421_20220427.xlsx  wodonga_20230209_20230215.xlsx
mount_isa/: MountIsa_Data_20200901_20200908_5min.xlsx  MountIsa_Data_20210821_20210827_5min.xlsx  MountIsa_Data_20220604_20220611_5min.xlsx  parameters_mount_isa_experiments.xlsx
port_augusta/: README.md  parameters_portaugusta_experiments.xlsx  soiling_portaugusta_2023-11-18_2023-11-22.xlsx
repo_stats/: clones_timeseries.csv  visitors_timeseries.csv
wodonga/: experiment_20220220_20220226.xlsx  experiment_20230209_20230215.xlsx  parameters_wodonga_experiments.xlsx
